--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,12 @@
 
 /* -------------------Scrollbar------------------- */
 
+ #twitter-widget-0 {
+
+  width: 700px !important;
+}
+
+
 .l-21 {
   line-height: 21.09px;
 }
